Actions
Bug #8163
closeddwarf: this statement may fall through
Start date:
2017-05-05
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
External Bug:
Description
Build with gcc 7.1:
../common/pro_expr.c:464:22: error: this statement may fall through [-Werror=implicit-fallthrough=]
Updated by Electric Monk about 6 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit c160bf3613805cfb4a89a0433ae896d3594f551f
commit c160bf3613805cfb4a89a0433ae896d3594f551f Author: Toomas Soome <tsoome@me.com> Date: 2017-05-08T08:45:07.000Z 8163 dwarf: this statement may fall through Reviewed by: Jason King <jason.brian.king@gmail.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Hans Rosenfeld <hans.rosenfeld@joyent.com>
Actions