8163 dwarf: this statement may fall through Reviewed by: Jason King <jason.brian.king@gmail.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Hans Rosenfeld <hans.rosenfeld@joyent.com>